Add allow for saving binary